Fix layout issue in older webkit, note form collapsing

--- a/source/component/note/style.scss
+++ b/source/component/note/style.scss
@@ -46,6 +46,8 @@
 }
 
 .note-form {
+    flex-shrink: 0;
+
     .toolbar {
         display: flex;
         flex-direction: row-reverse;
